--- a/styles.css
+++ b/styles.css
@@ -83,10 +83,10 @@ section {
    background-color: #3498db;
 
   /* Azul */
- /* background-image: url("img/MediumHeader.jpg");*/
+ /* background-image: url("img/MediumHeader.jpg");
   background-attachment: fixed;
   background-position: center;
-  background-size: cover;
+  background-size: cover;  */
   width: 100%;
   /* position: relative; */
   flex-direction: column;
