--- a/styles.css
+++ b/styles.css
@@ -79,20 +79,23 @@ section {
 /* Estilos adicionales según tus preferencias */
 
 /* Estilos para cada sección */
+/*
 #inicio {
    background-color: #3498db;
 
-  /* Azul */
- /* background-image: url("img/MediumHeader.jpg");
+  Azul 
+  background-image: url("img/MediumHeader.jpg");
   background-attachment: fixed;
   background-position: center;
-  background-size: cover;  */
+  background-size: cover;  
   width: 100%;
-  /* position: relative; */
+position: relative; 
   flex-direction: column;
 
+}*/
+#inicio {
+   background-color: #3498db;
 }
-
 
 #proyectos {
 
